--- a/src/docs/guides/general/server/import-and-export.en-US.mdx
+++ b/src/docs/guides/general/server/import-and-export.en-US.mdx
@@ -32,3 +32,5 @@ import exportImg from './import-and-export/export.png'
 ## Api
 
 see [Univer server API](/guides/sheet/server/api)
+
+A import demo: https://github.com/dream-num/usip-example/tree/main/import
