--- a/src/docs/guides/general/server/import-and-export.zh-CN.mdx
+++ b/src/docs/guides/general/server/import-and-export.zh-CN.mdx
@@ -30,3 +30,5 @@ import exportImg from './import-and-export/export.png'
 ## Api
 
 查看 [Univer server API 定义](/guides/sheet/server/api)
+
+一个导入的例子：https://github.com/dream-num/usip-example/tree/main/import
