--- a/src/docs/guides/sheet/features/core/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core/permission.zh-CN.mdx
@@ -11,7 +11,7 @@ import entryFile from './permission/demo-1/index.txt'
 
 Univer 提供了权限控制的能力，通常可用于限制用户对工作簿、工作表、选区的操作。当用户进行没有权限的操作时，可终止代码执行并提示用户缺失权限。例如你可以在一片选区内设置区域保护，就可以设置其他协作者在该保护范围内是否可以使用编辑、阅读、复制、筛选等等。
 
-**注意：Univer提供的是可拓展的基础能力，并非定制化的能力，第三方使用的时候需要自行实现权限规则的存储和组织架构接入，这里需要编写自定义插件来实现。**
+**注意：Univer提供的是可拓展的基础能力，并非定制化的能力，如果有持久化或者组织架构等更丰富和更定制化的需求，需要自行实现权限规则的存储和组织架构接入，这里需要编写自定义插件来实现。**
 所以会出现设置权限后去查看权限列表时权限信息为空、查看用户信息时返回为空等情况，这是因为这些信息都需要走接口请求拉取，是自定义的逻辑 需要自己额外补充，可以看下面的第三方接入。
 
 ## 基础示例
