--- a/src/docs/guides/sheet/features/core/permission.en-US.mdx
+++ b/src/docs/guides/sheet/features/core/permission.en-US.mdx
@@ -1,5 +1,8 @@
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Sandbox from '@/components/Sandbox'
+import { Callout } from 'nextra/components'
+import Image from '@/components/Image'
+import permissionImg from './permission/permission-en.png'
 
 import entryFile from './permission/demo-1/index.txt'
 
@@ -234,18 +237,189 @@ class ConsumeService {
 }
 ```
 
-### Integration of Third-Party Authorization Service
+### Integration of Third-Party Authorization Service(Advanced Usage)
+
+<Callout type="warning" emoji=" 🚨 ">
+  **It is recommended to avoid mixing custom permission access with the Permission Facade API, as it allows for more granular control over permission points.**
+</Callout>
 
 The logic for determining permissions is typically handled by an external service, which involves a communication process. In the frontend SDK implementation, we use the [AuthzIoLocalService](https://github.com/dream-num/univer/blob/dev/packages/core/src/services/authz-io/authz-io-local.service.ts) to handle this logic.
 
 In a production environment, we need to replace this implementation with a backend service. The frontend needs to implement the corresponding request functions based on the [IAuthzIoService](https://github.com/dream-num/univer/blob/dev/packages/core/src/services/authz-io/type.ts) interface for runtime replacement.
 
-Here's how you can replace it:
+<Image src={permissionImg} alt="Permission"  />
+
+Here is a simple example demonstrating the addition and deletion of protected range permissions for two predefined roles (Owner/Reader).
+The Owner has editing/viewing permissions for protected ranges, while the Reader cannot edit or view the contents of cells within protected ranges.
 
 ```typescript
 import { IAuthzIoService, Injector, Univer } from '@univerjs/core';
 
-class YourAuthzService implements IAuthzIoService { }
+import { IAuthzIoService, Injector, Univer, Inject, generateRandomId, IResourceManagerService, createDefaultUser, isDevRole, UserManagerService } from '@univerjs/core';
+import { ObjectScope, UnitAction, UnitObject, UnitRole, UniverType } from '@univerjs/protocol';
+import type { IActionInfo, IAllowedRequest, IBatchAllowedResponse, ICollaborator, ICreateRequest, ICreateRequest_SelectRangeObject, IListPermPointRequest, IPermissionPoint, IPutCollaboratorsRequest, IUnitRoleKV, IUpdatePermPointRequest } from '@univerjs/protocol';
+
+class YourAuthzService implements IAuthzIoService {
+    private _permissionMap: Map<string, ICreateRequest_SelectRangeObject & { objectType: UnitObject }> = new Map([]);
+
+    constructor(
+        @IResourceManagerService private _resourceManagerService: IResourceManagerService,
+        @Inject(UserManagerService) private _userManagerService: UserManagerService
+    ) {
+        this._initSnapshot();
+        this._initDefaultUser();
+    }
+
+    private _initDefaultUser() {
+        const currentUser = this._userManagerService.getCurrentUser();
+        const currentUserIsValid = currentUser && currentUser.userID;
+        if (!currentUserIsValid) {
+            this._userManagerService.setCurrentUser(createDefaultUser(UnitRole.Owner));
+        }
+    }
+
+    private _getRole(type: UnitRole) {
+        const user = this._userManagerService.getCurrentUser();
+        if (!user) {
+            return false;
+        }
+        return isDevRole(user.userID, type);
+    }
+
+    private _initSnapshot() {
+        this._resourceManagerService.registerPluginResource({
+            toJson: (_unitId: string) => {
+                const obj = [...this._permissionMap.keys()].reduce((r, k) => {
+                    const v = this._permissionMap.get(k);
+                    r[k] = v!;
+                    return r;
+                }, {} as Record<string, ICreateRequest_SelectRangeObject & { objectType: UnitObject }>);
+                return JSON.stringify(obj);
+            },
+            parseJson: (json: string) => {
+                return JSON.parse(json);
+            },
+            pluginName: 'SHEET_AuthzIoMockService_PLUGIN',
+            businesses: [UniverType.UNIVER_SHEET, UniverType.UNIVER_DOC, UniverType.UNIVER_SLIDE],
+            onLoad: (_unitId, resource) => {
+                for (const key in resource) {
+                    this._permissionMap.set(key, resource[key]);
+                }
+            },
+            onUnLoad: () => {
+                this._permissionMap.clear();
+            },
+        });
+    }
+
+    async create(config: ICreateRequest): Promise<string> {
+        const permissionId = generateRandomId(8);
+        if (config.objectType === UnitObject.SelectRange && config.selectRangeObject) {
+            this._permissionMap.set(permissionId, { ...config.selectRangeObject, objectType: config.objectType });
+        }
+        return permissionId;
+    }
+
+    async batchAllowed(config: IAllowedRequest[]): Promise<IBatchAllowedResponse['objectActions']> {
+        const selectionRangeConfig = config.filter((c) => c.objectType === UnitObject.SelectRange);
+        if (selectionRangeConfig.length) {
+            const currentUser = this._userManagerService.getCurrentUser();
+            const res = [] as IBatchAllowedResponse['objectActions'];
+            selectionRangeConfig.forEach((c) => {
+                res.push({
+                    unitID: c.unitID,
+                    objectID: c.objectID,
+                    actions: c.actions.map((action) => {
+                        if (isDevRole(currentUser.userID, UnitRole.Owner)) {
+                            return { action, allowed: true };
+                        }
+                        return { action, allowed: false };
+                    }),
+                });
+            });
+            return res;
+        }
+        return Promise.resolve([]);
+    }
+
+    async list(config: IListPermPointRequest): Promise<IPermissionPoint[]> {
+        const result: IPermissionPoint[] = [];
+        config.objectIDs.forEach((objectID) => {
+            const rule = this._permissionMap.get(objectID);
+            if (rule) {
+                const item = {
+                    objectID,
+                    unitID: config.unitID,
+                    objectType: rule!.objectType,
+                    name: rule!.name,
+                    shareOn: false,
+                    shareRole: UnitRole.Owner,
+                    shareScope: -1,
+                    scope: {
+                        read: ObjectScope.AllCollaborator,
+                        edit: ObjectScope.AllCollaborator,
+                    },
+                    creator: createDefaultUser(UnitRole.Owner),
+                    strategies: [
+                        {
+                            action: UnitAction.View,
+                            role: UnitRole.Owner,
+                        },
+                        {
+                            action: UnitAction.Edit,
+                            role: UnitRole.Owner,
+                        },
+                    ],
+                    actions: config.actions.map((a) => {
+                        return { action: a, allowed: this._getRole(UnitRole.Owner) };
+                    }),
+                };
+                result.push(item);
+            }
+        });
+        return result;
+    }
+
+    async listCollaborators(): Promise<ICollaborator[]> {
+        // List the existing collaborators
+        return [];
+    }
+
+    async allowed(_config: IAllowedRequest): Promise<IActionInfo[]> {
+        // Because this is a mockService for handling permissions, we will not write real logic in it. We will only return an empty array to ensure that the permissions originally set by the user are not modified.
+        // If you want to achieve persistence of permissions, you can modify the logic here.
+        return Promise.resolve([]);
+    }
+
+    async listRoles(): Promise<{ roles: IUnitRoleKV[]; actions: UnitAction[] }> {
+        return {
+            roles: [],
+            actions: [],
+        };
+    }
+
+    async update(config: IUpdatePermPointRequest): Promise<void> {
+        // Update bit information
+    }
+
+    async updateCollaborator(): Promise<void> {
+        // Update collaborator information
+        return undefined;
+    }
+
+    async createCollaborator(): Promise<void> {
+        // Create new collaborator information
+        return undefined;
+    }
+
+    async deleteCollaborator(): Promise<void> {
+        return undefined;
+    }
+
+    async putCollaborators(config: IPutCollaboratorsRequest): Promise<void> {
+        return undefined;
+    }
+}
 
 export class YourPlugin extends Plugin {
   override onStarting(injector: Injector): void {
