--- a/src/docs/guides/sheet/features/core/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core/permission.zh-CN.mdx
@@ -1,5 +1,8 @@
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Sandbox from '@/components/Sandbox'
+import Image from '@/components/Image'
+import permissionImg from './permission/permission-cn.png'
+import { Callout } from 'nextra/components'
 
 import entryFile from './permission/demo-1/index.txt'
 
@@ -164,7 +167,6 @@ const permission = univerAPI.getPermission();
 permission.removeRangeProtection(unitId, subUnitId, ruleIds);
 ```
 
-
 ## 拓展使用
 
 这里以`WorkbookEditablePermission`举例，在自己的插件中增加权限校验，其他点位类似
@@ -235,18 +237,187 @@ class ConsumeService {
 }
 ```
 
-### 第三方权限服务接入
+### 第三方权限服务接入(进阶用法)
+
+<Callout type="warning" emoji=" 🚨 ">
+  **已经开始接入自定义权限，可以直接操作更细粒度的权限点位，建议不要和 Permission Facade Api 混用。**
+</Callout>
 
 权限的判断逻辑通常是由一个外置服务来单独处理，这部分一般会带有一个通信流程，在纯前端 sdk 实现中，我们使用 [AuthzIoLocalService](https://github.com/dream-num/univer/blob/dev/packages/core/src/services/authz-io/authz-io-local.service.ts) 来承载这部分逻辑。
 
 在生产环境中，我们需要将这部分实现转由后端实现，前端需要基于 [IAuthzIoService](https://github.com/dream-num/univer/blob/dev/packages/core/src/services/authz-io/type.ts) 类型实现对应的请求函数，来进行运行时的替换。
 
-下面是一个简单的示例：
+<Image src={permissionImg} alt="Permission"  />
+
+下面是一个简单的示例用来展示预设 2 个角色( 所有者/阅读者) 情况下区域保护权限点位的增删.
+所有者拥有保护区域的编辑/查看权限,而阅读者不能编辑也不能查看保护区域内单元格的内容.
 
 ```typescript
-import { IAuthzIoService, Injector, Univer } from '@univerjs/core';
+import { IAuthzIoService, Injector, Univer, Inject, generateRandomId, IResourceManagerService, createDefaultUser, isDevRole, UserManagerService } from '@univerjs/core';
+import { ObjectScope, UnitAction, UnitObject, UnitRole, UniverType } from '@univerjs/protocol';
+import type { IActionInfo, IAllowedRequest, IBatchAllowedResponse, ICollaborator, ICreateRequest, ICreateRequest_SelectRangeObject, IListPermPointRequest, IPermissionPoint, IPutCollaboratorsRequest, IUnitRoleKV, IUpdatePermPointRequest } from '@univerjs/protocol';
 
-class YourAuthzService implements IAuthzIoService { }
+class YourAuthzService implements IAuthzIoService {
+    private _permissionMap: Map<string, ICreateRequest_SelectRangeObject & { objectType: UnitObject }> = new Map([]);
+
+    constructor(
+        @IResourceManagerService private _resourceManagerService: IResourceManagerService,
+        @Inject(UserManagerService) private _userManagerService: UserManagerService
+    ) {
+        this._initSnapshot();
+        this._initDefaultUser();
+    }
+
+    private _initDefaultUser() {
+        const currentUser = this._userManagerService.getCurrentUser();
+        const currentUserIsValid = currentUser && currentUser.userID;
+        if (!currentUserIsValid) {
+            this._userManagerService.setCurrentUser(createDefaultUser(UnitRole.Owner));
+        }
+    }
+
+    private _getRole(type: UnitRole) {
+        const user = this._userManagerService.getCurrentUser();
+        if (!user) {
+            return false;
+        }
+        return isDevRole(user.userID, type);
+    }
+
+    private _initSnapshot() {
+        this._resourceManagerService.registerPluginResource({
+            toJson: (_unitId: string) => {
+                const obj = [...this._permissionMap.keys()].reduce((r, k) => {
+                    const v = this._permissionMap.get(k);
+                    r[k] = v!;
+                    return r;
+                }, {} as Record<string, ICreateRequest_SelectRangeObject & { objectType: UnitObject }>);
+                return JSON.stringify(obj);
+            },
+            parseJson: (json: string) => {
+                return JSON.parse(json);
+            },
+            pluginName: 'SHEET_AuthzIoMockService_PLUGIN',
+            businesses: [UniverType.UNIVER_SHEET, UniverType.UNIVER_DOC, UniverType.UNIVER_SLIDE],
+            onLoad: (_unitId, resource) => {
+                for (const key in resource) {
+                    this._permissionMap.set(key, resource[key]);
+                }
+            },
+            onUnLoad: () => {
+                this._permissionMap.clear();
+            },
+        });
+    }
+
+    async create(config: ICreateRequest): Promise<string> {
+        const permissionId = generateRandomId(8);
+        if (config.objectType === UnitObject.SelectRange && config.selectRangeObject) {
+            this._permissionMap.set(permissionId, { ...config.selectRangeObject, objectType: config.objectType });
+        }
+        return permissionId;
+    }
+
+    async batchAllowed(config: IAllowedRequest[]): Promise<IBatchAllowedResponse['objectActions']> {
+        const selectionRangeConfig = config.filter((c) => c.objectType === UnitObject.SelectRange);
+        if (selectionRangeConfig.length) {
+            const currentUser = this._userManagerService.getCurrentUser();
+            const res = [] as IBatchAllowedResponse['objectActions'];
+            selectionRangeConfig.forEach((c) => {
+                res.push({
+                    unitID: c.unitID,
+                    objectID: c.objectID,
+                    actions: c.actions.map((action) => {
+                        if (isDevRole(currentUser.userID, UnitRole.Owner)) {
+                            return { action, allowed: true };
+                        }
+                        return { action, allowed: false };
+                    }),
+                });
+            });
+            return res;
+        }
+        return Promise.resolve([]);
+    }
+
+    async list(config: IListPermPointRequest): Promise<IPermissionPoint[]> {
+        const result: IPermissionPoint[] = [];
+        config.objectIDs.forEach((objectID) => {
+            const rule = this._permissionMap.get(objectID);
+            if (rule) {
+                const item = {
+                    objectID,
+                    unitID: config.unitID,
+                    objectType: rule!.objectType,
+                    name: rule!.name,
+                    shareOn: false,
+                    shareRole: UnitRole.Owner,
+                    shareScope: -1,
+                    scope: {
+                        read: ObjectScope.AllCollaborator,
+                        edit: ObjectScope.AllCollaborator,
+                    },
+                    creator: createDefaultUser(UnitRole.Owner),
+                    strategies: [
+                        {
+                            action: UnitAction.View,
+                            role: UnitRole.Owner,
+                        },
+                        {
+                            action: UnitAction.Edit,
+                            role: UnitRole.Owner,
+                        },
+                    ],
+                    actions: config.actions.map((a) => {
+                        return { action: a, allowed: this._getRole(UnitRole.Owner) };
+                    }),
+                };
+                result.push(item);
+            }
+        });
+        return result;
+    }
+
+    async listCollaborators(): Promise<ICollaborator[]> {
+        // List the existing collaborators
+        return [];
+    }
+
+    async allowed(_config: IAllowedRequest): Promise<IActionInfo[]> {
+        // Because this is a mockService for handling permissions, we will not write real logic in it. We will only return an empty array to ensure that the permissions originally set by the user are not modified.
+        // If you want to achieve persistence of permissions, you can modify the logic here.
+        return Promise.resolve([]);
+    }
+
+    async listRoles(): Promise<{ roles: IUnitRoleKV[]; actions: UnitAction[] }> {
+        return {
+            roles: [],
+            actions: [],
+        };
+    }
+
+    async update(config: IUpdatePermPointRequest): Promise<void> {
+        // Update bit information
+    }
+
+    async updateCollaborator(): Promise<void> {
+        // Update collaborator information
+        return undefined;
+    }
+
+    async createCollaborator(): Promise<void> {
+        // Create new collaborator information
+        return undefined;
+    }
+
+    async deleteCollaborator(): Promise<void> {
+        return undefined;
+    }
+
+    async putCollaborators(config: IPutCollaboratorsRequest): Promise<void> {
+        return undefined;
+    }
+}
 
 export class YourPlugin extends Plugin {
   override onStarting(injector: Injector): void {
