--- a/src/docs/guides/general/server/usip.en-US.mdx
+++ b/src/docs/guides/general/server/usip.en-US.mdx
@@ -108,7 +108,7 @@ curl -X POST "http://localhost:8080/collaborators" \
 
 # response
 {
-  "collobrators": [
+  "collaborators": [
     {
       "unitID":"AA",
       "subjects":[
