fix: fix dead links

--- a/src/docs/guides/doc/features/core.en-US.mdx
+++ b/src/docs/guides/doc/features/core.en-US.mdx
@@ -117,7 +117,7 @@ new Univer({
 });
 ```
 
-For a complete list of configuration options, see [IUniverData](/typedoc/@univerjs/core/interfaces/IUniverData).
+For a complete list of configuration options, see [IUniverConfig](https://github.com/dream-num/univer/blob/dev/packages/core/src/univer.ts#L57-L63).
 
 ### `@univerjs/ui`
 
