--- a/src/docs/guides/doc/features/core.zh-CN.mdx
+++ b/src/docs/guides/doc/features/core.zh-CN.mdx
@@ -115,7 +115,7 @@ new Univer({
 });
 ```
 
-完整的配置项参考 [IUniverData](/typedoc/@univerjs/core/interfaces/IUniverData)。
+完整的配置项参考 [IUniverConfig](https://github.com/dream-num/univer/blob/dev/packages/core/src/univer.ts#L57-L63)。
 
 ### `@univerjs/ui`
 
