--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -186,7 +186,7 @@ HOST_GRAFANA_PORT=13000
 
 4. Start/Restart the service: `bash run.sh`
 
-### How to change S3 config?  <a id="s3-config"></a>
+### How to change S3 config to use self compoment?  <a id="s3-config"></a>
 
 1. Update `.env` file, set the S3 config.
 ```shell
@@ -206,7 +206,9 @@ S3_DEFAULT_BUCKET=univer
 - `S3_ENDPOINT_PUBLIC`: public network endpoint, use to download file.
 - `S3_DEFAULT_BUCKET`: s3 bucket, create it before start univer service.
 
-2. Start/Restart the service: `bash run.sh`
+2. Remove the `univer-minio` service in `docker-compose.yaml` file, and delete the dependencies in other service `depends_on` properties.
+
+3. Start/Restart the service: `bash run.sh`
 
 ### Accessing Port 8000 Returns `404 page not found`
 
@@ -229,3 +231,44 @@ server:
 
 - "*": allow all domain CORS, but not support credential headers like authorization, cookie.
 - [SelfDomainOrigin]: like http://localhost:3010, use domain origin support credential headers.
+
+### How to change redis config to use self compoment?  <a id="redis-config"></a>
+
+1. Update `.env` file, set the redis config:
+```shell
+REDIS_ADDR=univer-redis:6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DB=0
+```
+- REDIS_ADDR: the redis node addr. If use redis cluster, use comma to split multiple addrs, for example `REDIS_ADDR=192.168.1.5:6001,192.168.1.5:6002,192.168.1.5:6003,192.168.1.5:6004`
+- REDIS_DB: if use redis cluster, the db always `0`.
+
+2. Remove the `univer-redis` service in `docker-compose.yaml` file, and delete the dependencies in other service `depends_on` properties.
+
+3. Start/Restart the service: `bash run.sh`
+
+### How to change rabbitmq config to use self compoment?  <a id="rabbitmq-config"></a>
+
+1. Update `.env` file, set the rabbitmq config:
+```shell
+# single node config
+RABBITMQ_HOST=univer-rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_HTTPPORT=15672
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
+
+# multiple node config
+RABBITMQ_CLUSTER_ENABLED=false
+RABBITMQ_CLUSTER_USERNAME=
+RABBITMQ_CLUSTER_PASSWORD=
+RABBITMQ_CLUSTER_ADDR=
+RABBITMQ_CLUSTER_VHOST=/
+RABBITMQ_CLUSTER_SCHEMA=amqp
+```
+- RABBITMQ_CLUSTER_ADDR: use comma to separate multiple addresses, for example: `RABBITMQ_CLUSTER_ADDR=192.168.1.2:5672,192.168.1.5:5672,192.168.1.7:5672`
+
+2. Remove the `univer-rabbitmq` service in `docker-compose.yaml` file, and delete the dependencies in other service `depends_on` properties.
+
+3. Start/Restart the service: `bash run.sh`
