--- a/src/docs/guides/general/server/kubernetes.en-US.mdx
+++ b/src/docs/guides/general/server/kubernetes.en-US.mdx
@@ -50,6 +50,13 @@ helm version
   kubectl get pods
   ```
 
+  3. Deploy observability component
+  ```bash
+  helm upgrade --install -n univer-observability --create-namespace \
+      --set global.univerNamespace="univer" \
+      univer-observability oci://univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/helm-charts/univer-observability
+  ```
+
   ### Deployment Verification
 
   ```bash
