--- a/src/docs/guides/sheet/features/hyperlink/introduction.en-US.mdx
+++ b/src/docs/guides/sheet/features/hyperlink/introduction.en-US.mdx
@@ -10,7 +10,9 @@ import entryFile from './hyperlink/demo-1/index.txt'
 
 <Sandbox entryFile={entryFile} />
 
-Insert hyperlinks, support click to jump to specified link, cell, or worksheet.
+1.	The hyperlink feature allows jumping to worksheets and cells, supporting adding, updating, parsing, and removing links.
+2.	Supports inserting hyperlinks within rich text.
+3.	Hyperlinks support sub-sheets, ranges/cells, defined names, and standard links (http, mailto, etc.).
 
 ## Installation
 
