--- a/src/docs/guides/sheet/features/hyperlink/introduction.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/hyperlink/introduction.zh-CN.mdx
@@ -10,7 +10,9 @@ import entryFile from './hyperlink/demo-1/index.txt'
 
 <Sandbox entryFile={entryFile} />
 
-插入超链接，支持点击跳转到指定链接、单元格、工作表。
+1. 超链接功能可跳转工作表、单元格，支持添加、更新、解析和删除链接。
+2. 支持富文本内插入超链接。
+3. 超链接支持 子表、range/cell、defined-name、标准链接(http,mailto等)。
 
 ## 安装
 
