--- a/src/docs/guides/sheet/features/hyperlink/introduction.en-US.mdx
+++ b/src/docs/guides/sheet/features/hyperlink/introduction.en-US.mdx
@@ -2,7 +2,7 @@ import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Sandbox from '@/components/Sandbox'
 
-import entryFile from './hyperlink/demo-1/index.txt'
+import entryFile from './demo-1/index.txt'
 
 # HyperLink
 
