feat: add docker compose document

--- a/src/docs/guides/general/server/kubernetes.en-US.mdx
+++ b/src/docs/guides/general/server/kubernetes.en-US.mdx
@@ -63,7 +63,7 @@ helm version
   # For quick testing, you might edit your local hosts file to map the domain.
   # Default domain: univer.example.com
 
-  Visit: http://univer.example.com
+  Visit: http://univer.example.com/sheet/
   ```
 </Steps>
 
