--- a/src/docs/guides/general/server/kubernetes.zh-CN.mdx
+++ b/src/docs/guides/general/server/kubernetes.zh-CN.mdx
@@ -63,7 +63,7 @@ helm version
   # 可以简单修改本地 hosts 文件来解析域名。
   # 默认域名: univer.example.com
 
-  open: http://univer.example.com
+  open: http://univer.example.com/sheet/
   ```
 </Steps>
 
